--- a/src/Interfaces/Reclutador/MenuConvocatoriaR.form
+++ b/src/Interfaces/Reclutador/MenuConvocatoriaR.form
@@ -44,8 +44,8 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="jPanel3" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -106,7 +106,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jButton3" alignment="0" pref="133" max="32767" attributes="0"/>
+                              <Component id="jButton3" alignment="0" max="32767" attributes="0"/>
                               <Component id="jButton2" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
@@ -189,7 +189,11 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Times New Roman" size="12" style="0"/>
+                </Property>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en la ciudad de Huancayo.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
               </Properties>
             </Component>
           </SubComponents>
@@ -216,7 +220,11 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Times New Roman" size="12" style="0"/>
+                </Property>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Domingo&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Miraflores,&#xa;San Isidro, Pueblo Libre.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
               </Properties>
             </Component>
           </SubComponents>
@@ -232,7 +240,11 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Times New Roman" size="12" style="0"/>
+                </Property>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 4 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Cercado de Lima,&#xa;Santa Anita, San Juan de Lurigancho.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
               </Properties>
             </Component>
           </SubComponents>
@@ -248,7 +260,11 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Times New Roman" size="12" style="0"/>
+                </Property>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="text" type="java.lang.String" value="No hay convocatoria en este momento"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -296,7 +312,7 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Convocatoria1"/>
+            <Property name="text" type="java.lang.String" value="40720SanJuan"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
@@ -341,7 +357,7 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Convocatoria4"/>
+            <Property name="text" type="java.lang.String" value="---------"/>
           </Properties>
         </Component>
       </SubComponents>
