--- a/src/Intrefaces/Postulante/MenuInicial.form
+++ b/src/Intrefaces/Postulante/MenuInicial.form
@@ -124,11 +124,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Fernando\Documents\NetBeansProjects\ProyectoDatos\WhatsApp Image 2020-07-03 at 7.57.23 PM.jpeg"/>
-            </Property>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -286,8 +281,10 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Times New Roman" size="12" style="0"/>
                     </Property>
+                    <Property name="lineWrap" type="boolean" value="true"/>
                     <Property name="rows" type="int" value="5"/>
                     <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en la ciudad de Huancayo.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
+                    <Property name="wrapStyleWord" type="boolean" value="true"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -329,8 +326,10 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Times New Roman" size="12" style="0"/>
                     </Property>
+                    <Property name="lineWrap" type="boolean" value="true"/>
                     <Property name="rows" type="int" value="5"/>
                     <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 8 horas diarias de Lunes a Domingo&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Miraflores,&#xa;San Juan de Lurigancho, Puente Piedra.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar.&#xa;"/>
+                    <Property name="wrapStyleWord" type="boolean" value="true"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -349,8 +348,10 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Times New Roman" size="12" style="0"/>
                     </Property>
+                    <Property name="lineWrap" type="boolean" value="true"/>
                     <Property name="rows" type="int" value="5"/>
                     <Property name="text" type="java.lang.String" value="REQUISITOS:&#xa;Hombres o mujeres mayores de 18 a&#xf1;os.&#xa;Con o Sin experiencia.&#xa;Disponibilidad para trabajar 4 horas diarias de Lunes a Sabado&#xa;en horarios rotativos entre las 7a.m. y 11p.m.&#xa;Disponibilidad para laborar en estos distritos: Cercado de Lima,&#xa;Santa Anita, San Juan de Lurigancho.&#xa;Disponibilidad para realizar capacitaciones previas al ingreso&#xa;a laborar."/>
+                    <Property name="wrapStyleWord" type="boolean" value="true"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -393,8 +394,10 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Times New Roman" size="12" style="0"/>
                     </Property>
+                    <Property name="lineWrap" type="boolean" value="true"/>
                     <Property name="rows" type="int" value="5"/>
                     <Property name="text" type="java.lang.String" value="No hay convocatoria en este momento"/>
+                    <Property name="wrapStyleWord" type="boolean" value="true"/>
                   </Properties>
                 </Component>
               </SubComponents>
